fix security issue

--- a/back-end/.env
+++ b/back-end/.env
@@ -1,2 +1,1 @@
-
-const DB_KEY = "mongodb+srv://sydneycburrell29:s3794870@cluster0.3px00fx.mongodb.net/?retryWrites=true&w=majority";
+DB_KEY = `mongodb+srv://sydneycburrell29:s3794870@cluster0.3px00fx.mongodb.net/?retryWrites=true&w=majority`
